--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.8.2",
-    "@actions/github": "^5.0.3"
+    "@actions/github": "^5.0.3",
+    "dotenv": "^16.0.1"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
