--- a/.github/workflows/upm-semver-update.yml
+++ b/.github/workflows/upm-semver-update.yml
@@ -20,3 +20,9 @@ jobs:
         with:
           package-json-path: './test/package.json'
           assembly-info-path: './test/Runtime/AssemblyInfo.cs'
+      - name: Auto commit
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "Update package version via automated action"
+          commit_options: '--no-verify --signoff'
+          branch: upm
