--- a/.github/workflows/upm-semver-update.yml
+++ b/.github/workflows/upm-semver-update.yml
@@ -21,7 +21,8 @@ jobs:
         with:
           package-json-path: './test/package.json'
           assembly-info-path: './test/Runtime/AssemblyInfo.cs'
-      - name: Auto commit
+      - name: Commit New Version 
+        if: ${{ steps.upm-semver-update.outputs.require-update }}
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Update package version to ${{ steps.upm-semver-update.outputs.new-version }} via automated action"
