--- a/.github/workflows/upm-semver-update.yml
+++ b/.github/workflows/upm-semver-update.yml
@@ -21,9 +21,10 @@ jobs:
         with:
           package-json-path: './test/package.json'
           assembly-info-path: './test/Runtime/AssemblyInfo.cs'
+      - name: Check require update
+        run: echo "require update - ${{ steps.upm-semver-update.outputs.require-update }}"
       - name: Commit New Version 
-        if: steps.upm-semver-update.outputs.require-update
-        run: echo "Require updating version"
+        if: ${{ steps.upm-semver-update.outputs.require-update }}
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Update package version to ${{ steps.upm-semver-update.outputs.new-version }} via automated action"
