--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/TB-Terence/upm-semver-update.git",
-  "author": "Jiabin Tang <jiabintang@hotmail.com>",
+  "author": "TB-Terence",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.8.2",
